hoping this fixes distorted svgs in IE

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -173,6 +173,7 @@ table.bioitem p a {
 .item .image img {
   background-color: white;
   max-width: 780px;
+  max-height: 100%;
   margin: 0px;
   border:none;
   border-radius: 4px;
